# pidgin-libfetion

./: Doxyfile  Makefile.am  Makefile.in  Message.sh  configure.ac  pidgin-libfetion.spec  pidgin-libfetion.spec.in
data/: Makefile.am
locale/po/: Makefile.am
pixmaps/: Makefile.am
pixmaps/protocols/16/: Makefile.am
pixmaps/protocols/22/: Makefile.am
src/: Makefile.am  f_buddy.c  f_chat.c  f_gchat.c  f_login.c  f_sysmsg.c  f_util.c  f_util.h  fetion.c  fetion.h  fx_login.c  openfetion.c
